cmake_minimum_required(VERSION 3.14)
project(Project_Euler)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_Euler_1 "Problem 001/p001.cpp")
add_executable(Project_Euler_2 "Problem 002/p002.cpp")
add_executable(Project_Euler_3 "Problem 003/p003.cpp")
add_executable(Project_Euler_4 "Problem 004/p004.cpp")
add_executable(Project_Euler_5 "Problem 005/p005.cpp")
add_executable(Project_Euler_6 "Problem 006/p006.cpp")
add_executable(Project_Euler_7 "Problem 007/p007.cpp")
add_executable(Project_Euler_8 "Problem 008/p008.cpp")