cmake_minimum_required(VERSION 3.14)
project(Project_Euler)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_Euler_001 "Problem 1/p1.cpp")
add_executable(Project_Euler_002 "Problem 2/p2.cpp")
add_executable(Project_Euler_003 "Problem 3/p3.cpp")
add_executable(Project_Euler_004 "Problem 4/p4.cpp")
add_executable(Project_Euler_005 "Problem 5/p5.cpp")
add_executable(Project_Euler_006 "Problem 6/p6.cpp")
add_executable(Project_Euler_007 "Problem 7/p7.cpp")
add_executable(Project_Euler_008 "Problem 8/p8.cpp")
add_executable(Project_Euler_009 "Problem 9/p9.cpp")
add_executable(Project_Euler_010 "Problem 10/p10.cpp")
add_executable(Project_Euler_011 "Problem 11/p11.cpp")
add_executable(Project_Euler_012 "Problem 12/p12.cpp")
add_executable(Project_Euler_013 "Problem 13/p13.cpp")
add_executable(Project_Euler_014 "Problem 14/p14.cpp")
add_executable(Project_Euler_015 "Problem 15/p15.cpp")
add_executable(Project_Euler_016 "Problem 16/p16.cpp")
add_executable(Project_Euler_017 "Problem 17/p17.cpp")
add_executable(Project_Euler_018 "Problem 18/p18.cpp")
add_executable(Project_Euler_019 "Problem 19/p19.cpp")

add_executable(Project_Euler_067 "Problem 67/p67.cpp")